--- a/assets/css/sidenavbar.css
+++ b/assets/css/sidenavbar.css
@@ -15,17 +15,20 @@
     left: 0;
     top: 0;
     box-orient: 0;
-    height: 100%;
-    width: 68px;
-    background: #000;
+    /* height: 100%; */
+    height: 3000px;
+    width: 96px;
+    background: #211f17;
     color: white;
     overflow: hidden;
     /* padding: 6px 14px; */
     /* z-index: 960; */
-    transition: width 0.2s linear, all 0.5s ease; /* Combining transitions */
-    border-right: 1px solid grey; /* Combining border shorthand property */
+    transition: width 0.2s linear, all 0.5s ease;
+    border-right: 2px solid grey;
 }
-
+ul.nav-list.border-bootom {
+    margin-top: 37px;
+}
 .sidebar ul li {
     list-style-type: none;
     margin: 10%;
@@ -53,6 +56,9 @@
     flex-direction: column-reverse;
 
 }
+li.li-sidebar {
+    margin-top: 40px;
+}
 .custom-text-logo {
     font-family: "Press Start 2P", system-ui;
     font-size: 26px;
@@ -73,7 +79,10 @@
     display: table;
     width: 300px;
     padding: 10px;
+    margin-left: 13px;
+    margin-top: 7px;
 }
+
 .fas{
     position: relative;
     width: 70px;
@@ -119,28 +128,13 @@ a:hover{
     /* -webkit-backdrop-filter: blur(4.9px); */
     border: 1px solid rgba(255, 255, 255, 0.15);
 }
-.custom-text-logo::after {
-    content: 'GameQuest';
- 
-}
-
-.custom-text-logo::before {
-    content: 'GQ';
-  
-}
-
-
-/* .custom-text-logo:hover::before {
-    content: 'GQ';
-} */
 
 .logout{
     position: absolute;
 }
 
 @media only screen and (max-width: 600px){
-    .sidebar{
-       
-   
-}
+    .sidebar {
+       display:none;
+    }
 }
